--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Inconsolata");
+@import url("https://fonts.googleapis.com/css?family=Avenir");
 
 .App {
   height: 100%;
@@ -6,4 +7,8 @@
   display: flex;
   flex-direction: column;
   font-family: "Inconsolata";
+}
+
+.font{
+  font-family: "Avenir";
 }
